Fixed z-index mistake in Auth.css page

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -68,7 +68,7 @@ body {
 .nav-elements ul li .list{
   display: none;
   position: relative;
-  margin-left: -40px;
+  margin-left: -30px;
 }
 
 .show-category:hover .list{
