--- a/src/user/Pages/Auth.css
+++ b/src/user/Pages/Auth.css
@@ -58,7 +58,7 @@
   font-weight: 600;
   line-height: 1.24;
   color: #111d4a;
-  z-index: 10;
+  z-index: 1;
   margin: 0;
 }
 
@@ -66,7 +66,7 @@
   color: #111d4a;
   font-weight: 500;
   font-size: 11px;
-  z-index: 10;
+  z-index: 1;
   margin: 0;
   margin-top: 7px;
 }
